refactor: optimize getAuthorities method to use AuthorityUtils spring security method